Fixed more spacing.

--- a/frontend-assignment-pixbay/style.css
+++ b/frontend-assignment-pixbay/style.css
@@ -20,6 +20,11 @@ img {
     background-color: antiquewhite; /* so that you can see pictures with no background */
 }
 
+figure{
+    padding: 5px;
+    padding-bottom: 0px;
+}
+
 figcaption {
     width: 200px;
 
